--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </head>
 <body>
 
-  <div class="container">
-    <p class="description">Improve your front-end skills by building projects</p>
+  <div class="center-container">
+    <div class="container">
+      <p class="description">Improve your front-end skills by building projects</p>
 
-    <p class="scan-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p class="scan-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+
 
   
     <img src="./images/image-qr-code.png" alt="QR Code" class="qr-code">
