--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap">
   
-  
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
 
   <div class="center-container">
     <div class="container">
-      <p class="description">Improve your front-end skills by building projects</p>
+      <p class="description">Improve your front-end skills</p>
 
-      <p class="scan-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p class="scan-text">Scan the QR code to visit Frontend Mentor and enhance your coding skills</p>
 
+      
+      <img src="./images/image-qr-code.png" alt="QR Code" class="qr-code">
 
-  
-    <img src="./images/image-qr-code.png" alt="QR Code" class="qr-code">
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/papingothegamer">Toluwanimi Daramola</a>.
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/papingothegamer">Toluwanimi Daramola</a>.
+      </div>
     </div>
   </div>
 </body>
